// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Functional React Component Tester UI snapshot: instantiated FunctionalRCTUI component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
  testID="fructose"
>
  <StatusBar
    animated={false}
    hidden={true}
    showHideTransition="fade"
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Fructose
  </Text>
</View>
`;

exports[`Functional React Component Tester UI snapshot: loading MockComponent 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
  testID="fructose"
>
  <StatusBar
    animated={false}
    hidden={true}
    showHideTransition="fade"
  />
  <MockComponent
    id="testIdBlah"
  />
</View>
`;
